# tsck-hologram-server

./: .gitignore  CMakeLists.txt  README.md  hologram.c  hologram.cpp  makefile  server.c  server.cpp  server.h  server.hpp  settings.h  video_player.cpp  video_player.hpp
mg/: mongoose.mk
web_root/: control.js  index.shtml  style.css
